# cpp-OpenGL-Tutorial

./: CMakeLists.txt  CPP-OpenGL-Tutorial.slnx  CPP-OpenGL-Tutorial.vcxproj  CPP-OpenGL-Tutorial.vcxproj.filters
Linking/include/glad/: glad.h
assets/: fragment_core.glsl  object.fs  object.vs
src/: Shader.cpp  Shader.h  glad.c  main.cpp
src/io/: Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/rendering/Models/: Cube.hpp  Lamp.hpp
